hopefully will fix hr on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -48,10 +48,7 @@ ul, ol {
     list-style-position: inside;
 }
 
-hr {
-    border-top: 0.1em solid #ddd;
-    border-radius: 0.25em;
-}
+hr { color: #ddd; }
 
 footer { font-size: 0.8em; }
 
